# django_learning

./: api.http  pyproject.toml  requirements.txt
ecommerce/: schema.yml
ecommerce/api/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  tasks.py  tests.py  throttles.py  urls.py  views.py
ecommerce/api/management/commands/: populate_db.py
ecommerce/api/migrations/: 0002_alter_orderitem_id_alter_orderitem_order_and_more.py
ecommerce/ecommerce/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
lecture_1/: db.sqlite3  manage.py  pyproject.toml
lecture_1/api/: admin.py  models.py  serializers.py  urls.py  views.py
lecture_1/api/migrations/: 0001_initial.py
lecture_1/lecture_1/: settings.py  urls.py
